--- a/History.txt
+++ b/History.txt
@@ -4,4 +4,4 @@
   * Classes: Scheduler, Thread, Timer, File, Popen.
   * Methods: elapsed.
   * Using lut.Builder to generated build files.
-  * Migrated lk.Socket to new scheduler.
+  * Migrated lens.Socket to new scheduler.
